# cetane

./: .jscpd.json  .projections.json  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
src/: lib.rs  migration.rs  migrator.rs
src/backend/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/field/: mod.rs  types.rs
src/operation/: constraint.rs  field.rs  index.rs  mod.rs  sql.rs  table.rs
src/state/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
tests/: mysql_integration.rs  postgres_integration.rs  sqlite_integration.rs
